--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ git+https://github.com/openai/whisper.git
 transformers
 moviepy
 torch==2.5.0+cpu
-torchvision==0.16.0+cpu
+torchvision==0.22.0+cpu  # Updated version
 torchaudio==2.1.0+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
